--- a/sysml_generator.html
+++ b/sysml_generator.html
@@ -325,10 +325,14 @@
   <!-- IDENTITY -->
   <div class="section">
     <div class="section-title">Identity</div>
+    <div class="field">
+      <label>STEP File <span class="unit-hint">(filename with extension)</span></label>
+      <input type="text" id="stepFileName" placeholder="e.g. LunarRover.step" oninput="syncPartName(this.value)">
+    </div>
     <div class="field-row-2">
       <div class="field">
         <label>Part Name</label>
-        <input type="text" id="partName" placeholder="e.g. LunarRover" required>
+        <input type="text" id="partName" placeholder="auto-filled from STEP filename" required>
       </div>
       <div class="field">
         <label>Material</label>
@@ -481,6 +485,12 @@ const MATERIALS = [
   "Aluminum_2219_T87",
   "Titanium_Ti6Al4V"
 ];
+
+// --- Sync Part Name from STEP filename as user types ---
+function syncPartName(value) {
+  const baseName = value.replace(/\.(step|stp)$/i, "").trim();
+  if (baseName) document.getElementById("partName").value = baseName;
+}
 
 // --- Custom attributes ---
 let attrCounter = 0;
