--- a/assembly_builder.html
+++ b/assembly_builder.html
@@ -729,7 +729,7 @@
   <div class="topbar-title">Assembly Builder</div>
   <div class="topbar-actions">
     <button class="btn-sm btn-outline" onclick="clearAll()">Clear All</button>
-    <button class="btn-sm btn-outline" id="btnPublish" onclick="openGitHubModal()" disabled>☁ Publish to GitHub</button>
+    <button class="btn-sm btn-outline" id="btnPublish" onclick="openGitHubModal()">☁ Publish to GitHub</button>
     <button class="btn-sm btn-primary" id="btnExport" onclick="downloadSysML()" disabled>⬇ Download</button>
   </div>
 </div>
