--- a/assembly_builder.html
+++ b/assembly_builder.html
@@ -879,7 +879,7 @@
   <!-- GENERATE -->
   <div class="form-section" style="display:flex; gap:10px;">
     <button class="btn-generate" onclick="previewSysML()" style="background:var(--surface); border:1px solid var(--border2); color:var(--text2);">Preview</button>
-    <button class="btn-generate" onclick="downloadSysML()">⬇ Download</button>
+    <button class="btn-generate" onclick="openGitHubModal()">☁ Publish to GitHub</button>
   </div>
 
   <!-- OUTPUT PREVIEW -->
