--- a/assembly_builder.html
+++ b/assembly_builder.html
@@ -1127,7 +1127,7 @@ document.addEventListener('DOMContentLoaded', () => {
 // ══════════════════════════════════════════════
 const GH_OWNER = 'abrunier3';
 const GH_REPO  = 'S24-ArchitectingLunarBases';
-const GH_PATH  = 'models/assembly.sysml';
+const GH_PATH  = 'database/sysml/assembly.sysml';
 const GH_BRANCH = 'main';
 
 function openGitHubModal() {
